Corrigiendo errores de index out